sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_alias_debug.llvm-ir.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph {
    Ty: "Directed",
    node_count: 4,
    edge_count: 2,
    edges: (1, 0), (2, 1),
    node weights: {
        0: Operation(
            GlobalAlias(
                GlobalAlias {
                    name: Name(
                        "alias_func",
                    ),
                    aliasee: ConstantRef(
                        GlobalReference {
                            name: Name(
                                "some_function",
                            ),
                            ty: TypeRef(
                                FuncType {
                                    result_type: TypeRef(
                                        IntegerType {
                                            bits: 32,
                                        },
                                    ),
                                    param_types: [
                                        TypeRef(
                                            IntegerType {
                                                bits: 32,
                                            },
                                        ),
                                    ],
                                    is_var_arg: false,
                                },
                            ),
                        },
                    ),
                    linkage: External,
                    visibility: Default,
                    ty: TypeRef(
                        PointerType {
                            addr_space: 0,
                        },
                    ),
                    addr_space: 0,
                    dll_storage_class: Default,
                    thread_local_mode: NotThreadLocal,
                    unnamed_addr: None,
                },
            ),
        ),
        1: Edge(
            Nil,
        ),
        2: Operation(
            Constant(
                ConstantRef(
                    GlobalReference {
                        name: Name(
                            "some_function",
                        ),
                        ty: TypeRef(
                            FuncType {
                                result_type: TypeRef(
                                    IntegerType {
                                        bits: 32,
                                    },
                                ),
                                param_types: [
                                    TypeRef(
                                        IntegerType {
                                            bits: 32,
                                        },
                                    ),
                                ],
                                is_var_arg: false,
                            },
                        ),
                    },
                ),
            ),
        ),
        3: Thunk(
            Graph {
                Ty: "Directed",
                node_count: 2,
                edge_count: 1,
                edges: (0, 1),
                node weights: {
                    0: Thunk(
                        Graph {
                            Ty: "Directed",
                            node_count: 8,
                            edge_count: 7,
                            edges: (1, 0), (0, 2), (4, 3), (5, 3), (3, 1), (6, 5), (7, 4),
                            node weights: {
                                0: Operation(
                                    Terminator(
                                        Ret(
                                            Ret {
                                                return_operand: Some(
                                                    LocalOperand {
                                                        name: Name(
                                                            "result",
                                                        ),
                                                        ty: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                debugloc: None,
                                            },
                                        ),
                                    ),
                                ),
                                1: Edge(
                                    BoundVar(
                                        Var {
                                            name: Name(
                                                "result",
                                            ),
                                        },
                                    ),
                                ),
                                2: Edge(
                                    CF(
                                        None,
                                    ),
                                ),
                                3: Operation(
                                    Instruction(
                                        Call(
                                            Call {
                                                function: Right(
                                                    ConstantOperand(
                                                        ConstantRef(
                                                            GlobalReference {
                                                                name: Name(
                                                                    "alias_func",
                                                                ),
                                                                ty: TypeRef(
                                                                    FuncType {
                                                                        result_type: TypeRef(
                                                                            IntegerType {
                                                                                bits: 32,
                                                                            },
                                                                        ),
                                                                        param_types: [
                                                                            TypeRef(
                                                                                IntegerType {
                                                                                    bits: 32,
                                                                                },
                                                                            ),
                                                                        ],
                                                                        is_var_arg: false,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                ),
                                                function_ty: TypeRef(
                                                    FuncType {
                                                        result_type: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                        param_types: [
                                                            TypeRef(
                                                                IntegerType {
                                                                    bits: 32,
                                                                },
                                                            ),
                                                        ],
                                                        is_var_arg: false,
                                                    },
                                                ),
                                                arguments: [
                                                    (
                                                        ConstantOperand(
                                                            ConstantRef(
                                                                Int {
                                                                    bits: 32,
                                                                    value: 42,
                                                                },
                                                            ),
                                                        ),
                                                        [],
                                                    ),
                                                ],
                                                return_attributes: [],
                                                dest: Some(
                                                    Name(
                                                        "result",
                                                    ),
                                                ),
                                                function_attributes: [],
                                                is_tail_call: false,
                                                calling_convention: C,
                                                debugloc: None,
                                            },
                                        ),
                                    ),
                                ),
                                4: Edge(
                                    Nil,
                                ),
                                5: Edge(
                                    Nil,
                                ),
                                6: Operation(
                                    Constant(
                                        ConstantRef(
                                            Int {
                                                bits: 32,
                                                value: 42,
                                            },
                                        ),
                                    ),
                                ),
                                7: Operation(
                                    Constant(
                                        ConstantRef(
                                            GlobalReference {
                                                name: Name(
                                                    "alias_func",
                                                ),
                                                ty: TypeRef(
                                                    FuncType {
                                                        result_type: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                        param_types: [
                                                            TypeRef(
                                                                IntegerType {
                                                                    bits: 32,
                                                                },
                                                            ),
                                                        ],
                                                        is_var_arg: false,
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                ),
                            },
                            edge weights: {
                                0: 0,
                                1: 0,
                                2: 0,
                                3: 1,
                                4: 0,
                                5: 0,
                                6: 0,
                            },
                        },
                    ),
                    1: Edge(
                        CF(
                            None,
                        ),
                    ),
                },
                edge weights: {
                    0: 0,
                },
            },
        ),
    },
    edge weights: {
        0: 0,
        1: 0,
    },
}
