sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_recursive.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Lambda),
    Edge(Nil),
    Edge(BoundVar(VariableDef(
      var: Variable("f"),
      meta: None,
    ))),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(VariableDef(
          var: Variable("f"),
          meta: None,
        ))),
        Edge(BoundVar(VariableDef(
          var: Variable("x"),
          meta: None,
        ))),
        Operation(App),
        Edge(BoundVar(VariableDef(
          var: Variable("g"),
          meta: None,
        ))),
        Edge(Nil),
        Operation(Lambda),
        Edge(Nil),
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(VariableDef(
              var: Variable("f"),
              meta: None,
            ))),
            Edge(BoundVar(VariableDef(
              var: Variable("y"),
              meta: None,
            ))),
            Operation(App),
            Edge(Nil),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((0, 2, 0)),
            Some((1, 2, 1)),
            Some((2, 3, 0)),
          ],
        )),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((3, 2, 0)),
        Some((1, 2, 1)),
        Some((2, 4, 0)),
        Some((6, 5, 0)),
        Some((5, 3, 0)),
        Some((0, 7, 0)),
        Some((7, 6, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((2, 3, 0)),
    Some((3, 1, 0)),
  ],
)
